--- a/lab/11_CNN.ipynb
+++ b/lab/11_CNN.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,54 +151,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[-0.4313, -0.6178, -0.9172,  ..., -1.8679, -1.7400,  0.0000],\n",
-      "         [-0.1357, -0.6325, -0.9781,  ..., -1.5618, -1.4637,  0.0000],\n",
-      "         [-0.3231, -0.9011, -1.2407,  ..., -1.2854, -1.0893,  0.0000],\n",
+      "tensor([[[-0.1822, -0.2603, -0.5567,  ..., -1.6092, -1.5349, -1.5088],\n",
+      "         [-0.3012, -0.5595, -0.7733,  ..., -1.8076, -1.7575, -1.6586],\n",
+      "         [-0.4960, -0.7906, -1.1863,  ..., -1.5581, -1.4347, -1.3293],\n",
       "         ...,\n",
-      "         [-2.3134, -2.1868, -2.2601,  ..., -1.9607, -2.9052,  0.0000],\n",
-      "         [-2.0395, -2.1422, -2.3144,  ..., -1.6066, -2.6834,  0.0000],\n",
+      "         [-3.1482, -2.5019, -2.2168,  ..., -1.9274, -3.0533, -1.7139],\n",
+      "         [-3.0428, -2.6713, -2.5638,  ..., -1.3039, -2.8508, -1.8152],\n",
+      "         [-3.2880, -3.0386, -2.9055,  ..., -1.4368, -3.0237, -2.5175]],\n",
+      "\n",
+      "        [[ 0.8938,  0.6987,  0.6911,  ...,  1.6093,  1.6242,  1.6291],\n",
+      "         [ 0.3671,  0.1978,  0.2341,  ...,  0.9073,  0.9473,  0.7756],\n",
+      "         [ 0.3700,  0.1632,  0.3382,  ...,  0.8634,  0.6843,  0.4598],\n",
+      "         ...,\n",
+      "         [ 0.9868,  0.3965,  0.5210,  ...,  0.9081,  1.0655,  1.2071],\n",
+      "         [ 0.9901,  0.3732,  0.4410,  ...,  0.9911,  1.1070,  1.0032],\n",
+      "         [ 1.3024,  0.7540,  0.6300,  ...,  1.0999,  1.2950,  1.1444]]])\n",
+      "tensor([[[-0.1822, -0.2603, -0.5567,  ..., -1.6092, -1.5349, -1.5088],\n",
+      "         [-0.3012, -0.5595, -0.7733,  ..., -1.8076, -1.7575, -1.6586],\n",
+      "         [-0.4960, -0.7906, -1.1863,  ..., -1.5581, -1.4347, -1.3293],\n",
+      "         ...,\n",
+      "         [-3.1482, -2.5019, -2.2168,  ..., -1.9274, -3.0533, -1.7139],\n",
+      "         [-3.0428, -2.6713, -2.5638,  ..., -1.3039, -2.8508, -1.8152],\n",
+      "         [-3.2880, -3.0386, -2.9055,  ..., -1.4368, -3.0237, -2.5175]],\n",
+      "\n",
+      "        [[ 0.8938,  0.6987,  0.6911,  ...,  1.6093,  1.6242,  1.6291],\n",
+      "         [ 0.3671,  0.1978,  0.2341,  ...,  0.9073,  0.9473,  0.7756],\n",
+      "         [ 0.3700,  0.1632,  0.3382,  ...,  0.8634,  0.6843,  0.4598],\n",
+      "         ...,\n",
+      "         [ 0.9868,  0.3965,  0.5210,  ...,  0.9081,  1.0655,  1.2071],\n",
+      "         [ 0.9901,  0.3732,  0.4410,  ...,  0.9911,  1.1070,  1.0032],\n",
+      "         [ 1.3024,  0.7540,  0.6300,  ...,  1.0999,  1.2950,  1.1444]]])\n",
+      "tensor([[[-2.0027e-01, -2.6186e-01, -2.3298e-01,  ..., -1.3104e+00,\n",
+      "          -1.2745e+00, -1.6773e+00],\n",
+      "         [-5.1415e-02, -1.8218e-01, -2.6028e-01,  ..., -1.5349e+00,\n",
+      "          -1.5088e+00, -1.6427e+00],\n",
+      "         [-2.1956e-01, -3.0117e-01, -5.5948e-01,  ..., -1.7575e+00,\n",
+      "          -1.6586e+00, -1.4217e+00],\n",
+      "         ...,\n",
+      "         [-1.9099e+00, -3.0428e+00, -2.6713e+00,  ..., -2.8508e+00,\n",
+      "          -1.8152e+00, -8.7770e-01],\n",
+      "         [-2.1093e+00, -3.2880e+00, -3.0386e+00,  ..., -3.0237e+00,\n",
+      "          -2.5175e+00, -1.4767e+00],\n",
+      "         [-1.2450e-01, -2.1590e+00, -2.0331e+00,  ..., -1.3300e+00,\n",
+      "          -1.9464e+00, -1.0884e+00]],\n",
+      "\n",
+      "        [[-2.5224e-03,  1.8562e-01,  1.2777e-01,  ...,  5.1440e-01,\n",
+      "           4.6300e-01, -4.3696e-01],\n",
+      "         [ 4.8347e-01,  8.9385e-01,  6.9873e-01,  ...,  1.6242e+00,\n",
+      "           1.6291e+00,  1.0570e+00],\n",
+      "         [ 1.9764e-01,  3.6712e-01,  1.9779e-01,  ...,  9.4732e-01,\n",
+      "           7.7556e-01,  4.7984e-01],\n",
+      "         ...,\n",
+      "         [ 6.5076e-01,  9.9009e-01,  3.7325e-01,  ...,  1.1070e+00,\n",
+      "           1.0032e+00,  2.5318e-02],\n",
+      "         [ 5.9632e-01,  1.3024e+00,  7.5397e-01,  ...,  1.2950e+00,\n",
+      "           1.1444e+00,  4.0623e-01],\n",
+      "         [ 2.3598e-01,  4.9762e-01,  1.2923e-02,  ...,  4.2320e-01,\n",
+      "           4.0447e-01, -2.0035e-01]]])\n",
+      "tensor([[[-2.0027e-01, -2.6186e-01, -2.3298e-01,  ..., -1.3104e+00,\n",
+      "          -1.2745e+00, -1.6773e+00],\n",
+      "         [-5.1415e-02, -1.8218e-01, -2.6028e-01,  ..., -1.5349e+00,\n",
+      "          -1.5088e+00, -1.6427e+00],\n",
+      "         [-2.1956e-01, -3.0117e-01, -5.5948e-01,  ..., -1.7575e+00,\n",
+      "          -1.6586e+00, -1.4217e+00],\n",
+      "         ...,\n",
+      "         [-1.9099e+00, -3.0428e+00, -2.6713e+00,  ..., -2.8508e+00,\n",
+      "          -1.8152e+00, -8.7770e-01],\n",
+      "         [-2.1093e+00, -3.2880e+00, -3.0386e+00,  ..., -3.0237e+00,\n",
+      "          -2.5175e+00, -1.4767e+00],\n",
+      "         [-1.2450e-01, -2.1590e+00, -2.0331e+00,  ..., -1.3300e+00,\n",
+      "          -1.9464e+00, -1.0884e+00]],\n",
+      "\n",
+      "        [[-2.5224e-03,  1.8562e-01,  1.2777e-01,  ...,  5.1440e-01,\n",
+      "           4.6300e-01, -4.3696e-01],\n",
+      "         [ 4.8347e-01,  8.9385e-01,  6.9873e-01,  ...,  1.6242e+00,\n",
+      "           1.6291e+00,  1.0570e+00],\n",
+      "         [ 1.9764e-01,  3.6712e-01,  1.9779e-01,  ...,  9.4732e-01,\n",
+      "           7.7556e-01,  4.7984e-01],\n",
+      "         ...,\n",
+      "         [ 6.5076e-01,  9.9009e-01,  3.7325e-01,  ...,  1.1070e+00,\n",
+      "           1.0032e+00,  2.5319e-02],\n",
+      "         [ 5.9632e-01,  1.3024e+00,  7.5397e-01,  ...,  1.2950e+00,\n",
+      "           1.1444e+00,  4.0623e-01],\n",
+      "         [ 2.3598e-01,  4.9762e-01,  1.2923e-02,  ...,  4.2320e-01,\n",
+      "           4.0447e-01, -2.0035e-01]]])\n",
+      "tensor([[[ 7.8921e-02, -8.6775e-01, -4.3979e-01,  ..., -1.1433e+00,\n",
+      "          -1.4030e+00,  3.7837e-01],\n",
+      "         [ 1.1824e-01, -2.0027e-01, -2.6186e-01,  ..., -1.2745e+00,\n",
+      "          -1.6773e+00, -5.9523e-01],\n",
+      "         [ 2.6494e-01, -5.1415e-02, -1.8218e-01,  ..., -1.5088e+00,\n",
+      "          -1.6427e+00, -9.8537e-01],\n",
+      "         ...,\n",
+      "         [ 2.1571e-01, -2.1093e+00, -3.2880e+00,  ..., -2.5175e+00,\n",
+      "          -1.4767e+00, -2.9085e-01],\n",
+      "         [ 4.5354e-02, -1.2450e-01, -2.1590e+00,  ..., -1.9464e+00,\n",
+      "          -1.0884e+00, -9.7080e-01],\n",
+      "         [ 5.9998e-02,  5.1510e-02, -8.2405e-01,  ..., -8.7738e-01,\n",
+      "          -5.4222e-01, -4.8382e-01]],\n",
+      "\n",
+      "        [[-1.4194e-01,  2.3826e-01,  4.1983e-01,  ...,  7.8545e-01,\n",
+      "           8.3181e-01,  4.6109e-01],\n",
+      "         [ 3.4561e-01, -2.5224e-03,  1.8562e-01,  ...,  4.6300e-01,\n",
+      "          -4.3696e-01,  4.0364e-01],\n",
+      "         [ 3.7213e-02,  4.8347e-01,  8.9385e-01,  ...,  1.6291e+00,\n",
+      "           1.0570e+00,  8.2006e-01],\n",
+      "         ...,\n",
+      "         [ 3.9581e-01,  5.9632e-01,  1.3024e+00,  ...,  1.1444e+00,\n",
+      "           4.0623e-01,  4.3507e-01],\n",
+      "         [ 5.6793e-01,  2.3598e-01,  4.9762e-01,  ...,  4.0447e-01,\n",
+      "          -2.0035e-01,  1.7843e-01],\n",
+      "         [-3.3478e-01,  6.7699e-01,  1.0033e+00,  ...,  1.2143e+00,\n",
+      "           1.0010e+00,  3.0655e-01]]])\n",
+      "tensor([[[ 7.8921e-02, -8.6775e-01, -4.3979e-01,  ..., -1.1433e+00,\n",
+      "          -1.4030e+00,  3.7837e-01],\n",
+      "         [ 1.1824e-01, -2.0027e-01, -2.6186e-01,  ..., -1.2745e+00,\n",
+      "          -1.6773e+00, -5.9523e-01],\n",
+      "         [ 2.6494e-01, -5.1415e-02, -1.8218e-01,  ..., -1.5088e+00,\n",
+      "          -1.6427e+00, -9.8537e-01],\n",
+      "         ...,\n",
+      "         [ 2.1571e-01, -2.1093e+00, -3.2880e+00,  ..., -2.5175e+00,\n",
+      "          -1.4767e+00, -2.9085e-01],\n",
+      "         [ 4.5354e-02, -1.2450e-01, -2.1590e+00,  ..., -1.9464e+00,\n",
+      "          -1.0884e+00, -9.7080e-01],\n",
+      "         [ 5.9998e-02,  5.1510e-02, -8.2405e-01,  ..., -8.7738e-01,\n",
+      "          -5.4222e-01, -4.8382e-01]],\n",
+      "\n",
+      "        [[-1.4194e-01,  2.3826e-01,  4.1983e-01,  ...,  7.8545e-01,\n",
+      "           8.3181e-01,  4.6109e-01],\n",
+      "         [ 3.4561e-01, -2.5224e-03,  1.8562e-01,  ...,  4.6300e-01,\n",
+      "          -4.3696e-01,  4.0364e-01],\n",
+      "         [ 3.7213e-02,  4.8347e-01,  8.9385e-01,  ...,  1.6291e+00,\n",
+      "           1.0570e+00,  8.2006e-01],\n",
+      "         ...,\n",
+      "         [ 3.9581e-01,  5.9632e-01,  1.3024e+00,  ...,  1.1444e+00,\n",
+      "           4.0623e-01,  4.3507e-01],\n",
+      "         [ 5.6793e-01,  2.3598e-01,  4.9762e-01,  ...,  4.0447e-01,\n",
+      "          -2.0035e-01,  1.7843e-01],\n",
+      "         [-3.3478e-01,  6.7699e-01,  1.0033e+00,  ...,  1.2143e+00,\n",
+      "           1.0010e+00,  3.0655e-01]]])\n",
+      "tensor([[[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+      "         [ 0.0000,  0.0789, -0.8677,  ..., -1.4030,  0.3784,  0.0000],\n",
+      "         [ 0.0000,  0.1182, -0.2003,  ..., -1.6773, -0.5952,  0.0000],\n",
+      "         ...,\n",
+      "         [ 0.0000,  0.0454, -0.1245,  ..., -1.0884, -0.9708,  0.0000],\n",
+      "         [ 0.0000,  0.0600,  0.0515,  ..., -0.5422, -0.4838,  0.0000],\n",
       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]],\n",
       "\n",
-      "        [[ 0.2892,  0.1149,  0.0514,  ..., -0.4578, -0.3748,  0.0000],\n",
-      "         [ 0.7045,  0.2809,  0.1164,  ..., -0.2420, -0.1889,  0.0000],\n",
-      "         [ 0.6320, -0.0032, -0.1341,  ..., -0.5204, -0.5091,  0.0000],\n",
+      "        [[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+      "         [ 0.0000, -0.1419,  0.2383,  ...,  0.8318,  0.4611,  0.0000],\n",
+      "         [ 0.0000,  0.3456, -0.0025,  ..., -0.4370,  0.4036,  0.0000],\n",
       "         ...,\n",
-      "         [ 0.1692, -0.6181, -0.5064,  ..., -1.1021, -1.5292,  0.0000],\n",
-      "         [-0.0437, -0.7349, -0.5405,  ..., -0.8304, -1.4327,  0.0000],\n",
+      "         [ 0.0000,  0.5679,  0.2360,  ..., -0.2003,  0.1784,  0.0000],\n",
+      "         [ 0.0000, -0.3348,  0.6770,  ...,  1.0010,  0.3066,  0.0000],\n",
       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]]])\n",
-      "tensor([[[-0.4313, -0.6178, -0.9172,  ..., -1.8679, -1.7400, -1.6596],\n",
-      "         [-0.1357, -0.6325, -0.9781,  ..., -1.5618, -1.4637, -1.5167],\n",
-      "         [-0.3231, -0.9011, -1.2407,  ..., -1.2854, -1.0893, -1.0550],\n",
+      "tensor([[[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+      "         [ 0.0000,  0.0789, -0.8677,  ..., -1.4030,  0.3784,  0.0000],\n",
+      "         [ 0.0000,  0.1182, -0.2003,  ..., -1.6773, -0.5952,  0.0000],\n",
       "         ...,\n",
-      "         [-2.3134, -2.1868, -2.2601,  ..., -1.9607, -2.9052, -0.8976],\n",
-      "         [-2.0395, -2.1422, -2.3144,  ..., -1.6066, -2.6834, -0.8317],\n",
-      "         [-2.1734, -2.2065, -2.2372,  ..., -1.9241, -2.8865, -1.3466]],\n",
+      "         [ 0.0000,  0.0454, -0.1245,  ..., -1.0884, -0.9708,  0.0000],\n",
+      "         [ 0.0000,  0.0600,  0.0515,  ..., -0.5422, -0.4838,  0.0000],\n",
+      "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]],\n",
       "\n",
-      "        [[ 0.2892,  0.1149,  0.0514,  ..., -0.4578, -0.3748, -0.3801],\n",
-      "         [ 0.7045,  0.2809,  0.1164,  ..., -0.2420, -0.1889, -0.4290],\n",
-      "         [ 0.6320, -0.0032, -0.1341,  ..., -0.5204, -0.5091, -0.6345],\n",
+      "        [[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+      "         [ 0.0000, -0.1419,  0.2383,  ...,  0.8318,  0.4611,  0.0000],\n",
+      "         [ 0.0000,  0.3456, -0.0025,  ..., -0.4370,  0.4036,  0.0000],\n",
       "         ...,\n",
-      "         [ 0.1692, -0.6181, -0.5064,  ..., -1.1021, -1.5292,  0.2362],\n",
-      "         [-0.0437, -0.7349, -0.5405,  ..., -0.8304, -1.4327,  0.6824],\n",
-      "         [ 0.0388, -0.7476, -0.6475,  ..., -0.0375, -1.0842,  0.7768]]])\n"
+      "         [ 0.0000,  0.5679,  0.2360,  ..., -0.2003,  0.1784,  0.0000],\n",
+      "         [ 0.0000, -0.3348,  0.6770,  ...,  1.0010,  0.3066,  0.0000],\n",
+      "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]]])\n"
      ]
     },
     {
-     "ename": "AssertionError",
-     "evalue": "",
+     "ename": "IndexError",
+     "evalue": "index 16 is out of bounds for dimension 2 with size 15",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-113-eeae309e843f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-115-eeae309e843f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfilt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mproduct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrides\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpaddings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# your convolution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstride\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpadding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;31m# PyTorch equivalent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mout_torch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfilt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpadding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstride\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-114-1fc9bda22fd7>\u001b[0m in \u001b[0;36mconvolution\u001b[0;34m(image, filters, bias, stride, padding)\u001b[0m\n\u001b[1;32m     39\u001b[0m                     \u001b[0mfilter_window\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfilters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moutch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m                     \u001b[0mbias_window\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbias\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moutch\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m                     \u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moutch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_window\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfilter_window\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mbias_window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 16 is out of bounds for dimension 2 with size 15"
      ]
     }
    ],
